# AntiWindowSnap

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  resource.rc
src/: helper.rs  lib.rs  main.rs
