[package]
name = "AntiWindowSnap"
version = "0.1.0"
edition = "2021"
description = "Prevent screenshotting and screen recording for the window with the specified title."
repository = "https://github.com/pkptzx/AntiWindowSnap"

[lib]
name = "anti_window_snap"

[dependencies]
dashmap = "6.0.1"
once_cell = "1.19.0"
vcheat = "0.6.5"
windows = { version = "0.58.0", features = [
    "Win32_Foundation",
    "Win32_UI_Accessibility",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_LibraryLoader",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Console",
] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true