[package]
name = "AntiWindowSnap"
version = "1.2.0"
edition = "2021"
description = "Prevent screenshotting and screen recording for the window with the specified title."
repository = "https://github.com/pkptzx/AntiWindowSnap"

[lib]
name = "anti_window_snap"

[dependencies]
dashmap = "6.0.1"
once_cell = "1.19.0"
fltk = { version = "^1.4", features = ["fltk-bundled"] }
image = "0.25.1"
scopeguard = "1.2.0"
windows = { version = "0.58.0", features = [
    "Win32_Foundation",
    "Win32_UI_Accessibility",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_LibraryLoader",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_Graphics_Gdi",
] }

[build-dependencies]
embed-resource = "2.4"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
